Bug 1573316 - RDM controls are off-center (when in centered mode) r=gl
Added a CSS selector to aid in centering RDM controls

Differential Revision: https://phabricator.services.mozilla.com/D43067

UltraBlame original commit: 61bf21fe14164a7fb66ee5799a26e1128cce3fcf

--- a/devtools/client/responsive/index.css
+++ b/devtools/client/responsive/index.css
@@ -784,6 +784,37 @@ left
 -
 aligned
 )
+{
+grid
+-
+template
+-
+columns
+:
+1fr
+auto
+1fr
+min
+-
+content
+;
+justify
+-
+content
+:
+center
+;
+}
+#
+toolbar
+:
+not
+(
+.
+left
+-
+aligned
+)
 #
 toolbar
 -
@@ -791,11 +822,37 @@ center
 -
 controls
 {
+grid
+-
+column
+-
+start
+:
+2
+;
+}
+#
+toolbar
+:
+not
+(
+.
+left
+-
+aligned
+)
+#
+toolbar
+-
+end
+-
+controls
+{
 justify
 -
 content
 :
-center
+end
 ;
 }
 #
